--- a/index.html
+++ b/index.html
@@ -15,16 +15,17 @@
     />
 
     <!-- CSS -->
-
-    <link rel="stylesheet" href="/css/reset.css">
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/reset.css" />
+    <link rel="stylesheet" href="/css/styles.css" />
 
     <!-- JS -->
+    <script src="/js/app.js" defer></script>
   </head>
   <body>
-    <header>
-      <h1>Where in the world?</h1>
-      <button>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <header class="header">
+      <h1 class="title">Where in the world?</h1>
+      <button class="theme-switcher">
         <svg viewBox="0 0 24 24" width="24" height="24">
           <path
             d="M10 4c4.41 0 8 3.59 8 8s-3.59 8-8 8c-.34 0-.68-.02-1.01-.07C10.9 17.77 12 14.95 12 12s-1.1-5.77-3.01-7.93C9.32 4.02 9.66 4 10 4m0-2c-1.82 0-3.53.5-5 1.35C7.99 5.08 10 8.3 10 12s-2.01 6.92-5 8.65C6.47 21.5 8.18 22 10 22c5.52 0 10-4.48 10-10S15.52 2 10 2z"
@@ -35,11 +36,19 @@
     </header>
     <main>
       <section>
-        <form>
-          <label for="country-search">Search for a country...</label>
-          <input type="text" id="country-search" />
-          <label for="region-filter">Filter by Region</label>
-          <select name="region-filter" id="region-filter">
+        <form class="form-container">
+          <label for="country-search" class="sr-only"
+            >Search for a country...</label
+          >
+          <input
+            type="text"
+            id="country-search"
+            placeholder="Search for a country..."
+            class="search"
+          />
+          <label for="region-filter" class="sr-only">Filter by Region</label>
+          <select name="region-filter" id="region-filter" class="filter">
+            <option value="region" selected disabled>Filter by Region</option>
             <option value="all">All</option>
             <option value="africa">Africa</option>
             <option value="america">America</option>
@@ -48,7 +57,23 @@
             <option value="oceania">Oceania</option>
           </select>
         </form>
-        <div class="grid-container"></div>
+        <div class="grid-container">
+          <div class="country">
+            <img
+              src="https://flagcdn.com/w320/ad.png"
+              width="265"
+              height="150"
+              alt=""
+              class="country-flag"
+            />
+            <div class="country-details">
+              <h2 class="country-name">Andorra</h2>
+              <p><strong>Population:</strong> 77,265</p>
+              <p><strong>Region:</strong> Europe</p>
+              <p><strong>Capital:</strong> Andorra la Vella</p>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
   </body>
