Add functionality for searching

--- a/index.html
+++ b/index.html
@@ -57,23 +57,7 @@
             <option value="oceania">Oceania</option>
           </select>
         </form>
-        <div class="grid-container">
-          <div class="country">
-            <img
-              src="https://flagcdn.com/w320/ad.png"
-              width="265"
-              height="150"
-              alt=""
-              class="country-flag"
-            />
-            <div class="country-details">
-              <h2 class="country-name">Andorra</h2>
-              <p><strong>Population:</strong> 77,265</p>
-              <p><strong>Region:</strong> Europe</p>
-              <p><strong>Capital:</strong> Andorra la Vella</p>
-            </div>
-          </div>
-        </div>
+        <div class="grid-container"></div>
       </section>
     </main>
   </body>
